k8s-manifests/dev/external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-postgres
  # namespace: ecommerce-dev
spec:
  type: ExternalName
  externalName: <your-db.cluster-abcdefghijkl.ap-south-1.rds.amazonaws.com>
