k8s-manifests/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-internal
  annotations:
    # INTERNAL ALB
    alb.ingress.kubernetes.io/scheme: internal

    # Target pods directly
    alb.ingress.kubernetes.io/target-type: ip

    # Listener config
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'

    # Health check (applies to all target groups)
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port

    # Optional tuning (recommended)
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    

    # Grouping (if multiple ingresses later)
    alb.ingress.kubernetes.io/group.name: ecommerce-internal

spec:
  ingressClassName: alb   # ✅ modern standard
  
  defaultBackend:
    service:
      name: product-service
      port:
        number: 8001

  rules:
    - http:
        paths:
		
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8001

          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 8002

          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8003

          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8004
